--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "store",
   "version": "0.1.0",
+  "author": "@newmanFajardo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
